Fix list box's element overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ ul {
 
 li {
   padding: 15px;
-  padding-left: 50px;
+  padding-left: 30px;
 }
 
 .submit {
